--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Discord Webhook Attacker </title>
+  <title>Discord Webhook Tool</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Discord Webhook Attacker</h1>
+    <h1 class="title-animation">🚀 Discord Webhook Tool 🚀</h1>
 
     <!-- Webhook入力欄 -->
     <div class="input-group">
