--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <!-- ボタン群 -->
     <div class="button-group">
-      <button class="request-btn" data-requests="12000">12k</button>
-      <button class="request-btn" data-requests="30000">30k</button>
-      <button class="request-btn" data-requests="100000">100k</button>
-      <button class="request-btn" data-requests="500000">500k</button>
+      <button class="request-btn" data-requests="10000">a little attack</button>
+      <button class="request-btn" data-requests="100000">attack</button>
+      <button class="request-btn" data-requests="1000000">high attack</button>
+      <button class="request-btn" data-requests="50000000">crash attack</button>
     </div>
 
     <!-- ステータス表示 -->
