--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <!-- ステータス表示 -->
     <div class="status">
-      <p>成功数 (Success): <span id="successCount">0</span></p>
-      <p>失敗数 (Failed): <span id="failedCount">0</span></p>
+      <p>Success: <span id="successCount">0</span></p>
+      <p>Failed: <span id="failedCount">0</span></p>
     </div>
   </div>
 
