--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>DisCrashは大量にリクエストを送り、アカウントの停止や制限をかけるツールです
     <ul>
       <li><strong>Webhook URL:</strong> 攻撃したい相手のWebhookをURL欄に入力してください。</li>
-      <li><strong>送信ボタン:</strong> a litte attack(10k), attack(100k), high attack(1m), crash attack(50m)から選択できます。</li>
+      <li><strong>送信ボタン:</strong> a litte attack(10k), attack(100k), high attack(1m), crash attack(50m)から選択できます。(リクエスト数)</li>
       <li><strong>成功数/失敗数:</strong> 各リクエストの実行結果がリアルタイムで表示されます。</li>
       <li>リクエスト処理は高速かつ効率的に行われるように設計されています。</li>
     </ul>
