--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </ul>
     <p>※ 過度なリクエストを送り、法的措置などが起きた際は自己責任でお願いします！</p>
   </div>
+  <p>Developed by n4n45h1 | Sourse code: https://github.com/n4n45h1/Discord-Crasher</p>
 
   <script src="script.js"></script>
 </body>
