--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
     <div class="button-group">
       <button class="request-btn" data-requests="100000">attack</button>
     </div>
-  </div>
+    
+    <div id="statusMessage" class="status-message"></div> <!-- 追加 -->
 
     <div class="description">
-    <h2>ツールの使い方・ツールの機能</h2>
-    <p>DisCrashは大量にリクエストを送り、アカウントに一時的な制限をかけるツールです</p>
-    <ul>
-      <li><strong>Webhook URL:</strong> 攻撃したい相手のWebhookをURL欄に入力してください。</li>
-      <li>リクエスト処理は高速かつ効率的に行われるように設計されています。</li>
-    </ul>
-    <p>※ 過度なリクエストを送り、法的措置などが起きた際は自己責任でお願いします！</p>
+      <h2>ツールの使い方・ツールの機能</h2>
+      <p>DisCrashは大量にリクエストを送り、アカウントに一時的な制限をかけるツールです</p>
+      <ul>
+        <li><strong>Webhook URL:</strong> 攻撃したい相手のWebhookをURL欄に入力してください。</li>
+        <li>リクエスト処理は高速かつ効率的に行われるように設計されています。</li>
+      </ul>
+      <p>※ 過度なリクエストを送り、法的措置などが起きた際は自己責任でお願いします！</p>
+    </div>
   </div>
-  <p>Developed by n4n45h1 | Sourse code: https://github.com/n4n45h1/Discord-Crasher</p>
 
   <script src="script.js"></script>
 </body>
